--- a/index.html
+++ b/index.html
@@ -3,9 +3,11 @@
 <head>
   <meta charset="utf-8">
   <title>Snake Game</title>
+  <link href="https://fonts.googleapis.com/css?family=Press+Start+2P|VT323" rel="stylesheet">
   <link rel="stylesheet" type="text/css" href="style.css">
 </head>
 <body>
+  <h1>SNAKE GAME</h1>
   <canvas id="canvas" width="500" height="300"></canvas>
   <script type="text/javascript" src="javascript.js"></script>
 </body>
