--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 </head>
 <body>
   <h1>SNAKE GAME</h1>
-  <canvas id="canvas" width="500" height="300"></canvas>
+  <canvas id="canvas" width="500" height="300">Your browser does not support the HTML5 canvas tag.</canvas>
   <script type="text/javascript" src="javascript.js"></script>
 </body>
 </html>
