--- a/index.html
+++ b/index.html
@@ -8,6 +8,9 @@
 </head>
 <body>
   <h1>SNAKE GAME</h1>
+  <div class="info">
+    <p>Score: <span id="score">0</span></p>
+  </div>
   <canvas id="canvas" width="500" height="300">Your browser does not support the HTML5 canvas tag.</canvas>
   <script type="text/javascript" src="javascript.js"></script>
 </body>
