Add a message for start a new game

--- a/index.html
+++ b/index.html
@@ -8,10 +8,13 @@
 </head>
 <body>
   <h1>SNAKE GAME</h1>
-  <div class="info">
-    <p>Score: <span id="score">0</span></p>
+  <div class="game__message">
+    <p>Score: <span id="msg--score">0</span></p>
   </div>
   <canvas id="canvas" width="500" height="300">Your browser does not support the HTML5 canvas tag.</canvas>
+  <div class="game__message">
+    <p id="msg--over"></p>
+  </div>
   <script type="text/javascript" src="javascript.js"></script>
 </body>
 </html>
