--- a/index.html
+++ b/index.html
@@ -8,11 +8,12 @@
 </head>
 <body>
   <h1>SNAKE GAME</h1>
-  <div class="game__message">
+  <div class="game__score">
     <p>Score: <span id="msg--score">0</span></p>
   </div>
   <canvas id="canvas" width="500" height="300">Your browser does not support the HTML5 canvas tag.</canvas>
-  <div class="game__message">
+  <div>
+    <p id="msg--instructions">Use arrow keys to move the snake</p>
     <p id="msg--over"></p>
   </div>
   <script type="text/javascript" src="javascript.js"></script>
