--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
 <head>
   <meta charset="utf-8">
   <title>Snake Game</title>
+  <link rel="shortcut icon" href="icon.ico">
   <link href="https://fonts.googleapis.com/css?family=Press+Start+2P|VT323" rel="stylesheet">
   <link rel="stylesheet" type="text/css" href="style.css">
 </head>
